fix(css): add spacing to the site title

--- a/css/header/header.css
+++ b/css/header/header.css
@@ -2,6 +2,7 @@
 	max-width: var(--size-container-width);
 	margin: 0 auto;
 	margin-bottom: var(--size-space);
+	padding-top: var(--size-space);
 }
 
 .header__item {
